syntax = "proto3";

package com.thanosfisherman.grpcplayground.protos;
option java_multiple_files = true;

message UserProfile {
  string userId = 1;
  string username = 2;
  string email = 3;
}
